Add JavaDoc comments to various classes and interfaces for improved documentation and clarity